Fixed #1 replaced escaped binding chars with "@"

--- a/AndroidBoundExample/src/main/res/layout/activity_main.xml
+++ b/AndroidBoundExample/src/main/res/layout/activity_main.xml
@@ -12,6 +12,6 @@
               android:layout_height="wrap_content"
               android:layout_centerInParent="true"
               tools:text="test"
-              binding="{ Text &lt;= MainActivityTitle }"/>
+              binding="{ Text @= MainActivityTitle }"/>
 
 </RelativeLayout>
