--- a/AndroidBoundExample/src/main/res/layout/activity_main.xml
+++ b/AndroidBoundExample/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
             android:layout_centerHorizontal="true"
             android:textSize="20sp"
             tools:text="title"
-            binding="{ Text @= MainActivityTitle }; { TextColor @= MainActivityTitleColor };{ Typeface @- ToFont(this, &apos;bold&apos;) }"/>
+            binding="{ Text @= MainActivityTitle }; { TextColor @= MainActivityTitleColor }; { Typeface @- ToFont(this, &apos;bold&apos;) }"/>
 
     <Button
             android:id="@+id/open_bindable_activity_button"
@@ -29,6 +29,8 @@
             android:textSize="16sp"
             android:layout_margin="16dp"
             tools:text="open bindable activity"
-            binding="{ Click @- OpenBindableActivity }; {Text @= OpenBindableActivityText }; { Typeface @- ToFont(this, &apos;missing&apos;) }"             />
+            binding="{ Click @- OpenBindableActivity }; {Text @= OpenBindableActivityText }; { Typeface @- ToFont(this, &apos;missing&apos;) };
+            { BackgroundColor @= ButtonBackgroundColor }; { TextColor @= MainActivityTitleColor }"/>
+
 
 </RelativeLayout>
