added default font binding to activity_main layout

--- a/AndroidBoundExample/src/main/res/layout/activity_main.xml
+++ b/AndroidBoundExample/src/main/res/layout/activity_main.xml
@@ -51,7 +51,7 @@
             android:layout_below="@+id/edittext"
             android:textSize="20sp"
             tools:text="bound to edittext"
-            binding="{ Text @= TextViewBoundToEditText }; { Click @- TextViewClick }; { LongClick @- TextViewLongClick }"/>
+            binding="{ Text @= TextViewBoundToEditText }; { Click @- TextViewClick }; { LongClick @- TextViewLongClick }; { Typeface @- ToFont(this) }"/>
 
     <ImageView
             android:id="@+id/imageview"
