--- a/AndroidBoundExample/src/main/res/layout/activity_listview_listitem.xml
+++ b/AndroidBoundExample/src/main/res/layout/activity_listview_listitem.xml
@@ -8,14 +8,27 @@
                 tools:ignore="MissingPrefix"
                 android:background="@android:color/darker_gray">
 
-    <TextView
-            android:id="@+id/text"
-            android:layout_width="match_parent"
+    <ImageView
+            android:id="@+id/image"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
+            binding="{Source @= ImageUrl}"
+            android:layout_margin="4dp"
+            android:gravity="left"/>
+
+    <TextView
+            android:id="@+id/text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@+id/image"
+            android:layout_toEndOf="@+id/image"
             binding="{Text @= Title}"
             android:gravity="left"
             android:layout_marginBottom="4dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:textSize="16sp"
             android:text="Text"/>
 
