added example for ListView with different objects and layouts

--- a/AndroidBoundExample/src/main/res/layout/activity_listview_listitem2.xml
+++ b/AndroidBoundExample/src/main/res/layout/activity_listview_listitem2.xml
@@ -6,7 +6,7 @@
                 android:orientation="vertical"
                 android:padding="10dp"
                 tools:ignore="MissingPrefix"
-                android:background="@color/darker_gray">
+                android:background="@color/lighter_gray">
 
     <ImageView
             android:id="@+id/image"
