--- a/AndroidBoundExample/src/main/res/layout/activity_main.xml
+++ b/AndroidBoundExample/src/main/res/layout/activity_main.xml
@@ -56,9 +56,9 @@
     <ImageView
             android:id="@+id/imageview"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="80dp"
             android:layout_below="@+id/edittext_textview"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="20dp"
             android:background="@android:color/white"
             binding="{ Resource @= ImageViewResource }; { Click @- ImageViewClick }; { LongClick @- ImageViewLongClick }"/>
 
@@ -69,8 +69,19 @@
             android:layout_centerHorizontal="true"
             android:layout_below="@+id/imageview"
             android:textSize="20sp"
-            android:layout_margin="16dp"
+            android:layout_margin="10dp"
             android:text="open listview activity"
             binding="{ Click @- OpenListViewActivity }"/>
+
+    <Button
+            android:id="@+id/open_listviewwithobjects_activity_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/open_listview_activity_button"
+            android:textSize="20sp"
+            android:layout_margin="10dp"
+            android:text="open listview with objects activity"
+            binding="{ Click @- OpenListViewWithObjectsActivity }"/>
 
 </RelativeLayout>
