--- a/AndroidBoundExample/src/main/res/layout/activity_recyclerview.xml
+++ b/AndroidBoundExample/src/main/res/layout/activity_recyclerview.xml
@@ -1,5 +1,5 @@
 <!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
-<RelativeLayout
+<ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/drawer_layout"
@@ -9,32 +9,43 @@
         tools:ignore="MissingPrefix"
         android:padding="16dp">
 
-    <TextView
-            android:id="@+id/activity_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:textSize="20sp"
-            tools:text="title"
-            binding="{ Text @= ListViewActivityTitle }"/>
+    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
 
-    <Button
-            android:id="@+id/open_main_activity_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@+id/activity_title"
-            android:textSize="16sp"
-            android:layout_margin="16dp"
-            android:text="open main activity"
-            binding="{ Click @- OpenMainActivity }"/>
+        <TextView
+                android:id="@+id/activity_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:textSize="20sp"
+                tools:text="title"
+                binding="{ Text @= ListViewActivityTitle }"/>
 
-    <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/open_main_activity_button"
-            binding="{ItemsSource @= ExampleList}"/>
+        <Button
+                android:id="@+id/open_main_activity_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/activity_title"
+                android:textSize="16sp"
+                android:layout_margin="16dp"
+                android:text="open main activity"
+                binding="{ Click @- OpenMainActivity }"/>
 
-</RelativeLayout>
+        <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerview_linear"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/open_main_activity_button"
+                binding="{ItemsSource @= ExampleListLinear}"/>
+
+        <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerview_staggered"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/recyclerview_linear"
+                binding="{ItemsSource @= ExampleListStaggered}"/>
+
+    </RelativeLayout>
+
+</ScrollView>
