--- a/AndroidBoundExample/src/main/res/layout/activity_listview_listitem.xml
+++ b/AndroidBoundExample/src/main/res/layout/activity_listview_listitem.xml
@@ -13,18 +13,19 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            binding="{Source @= ImageUrl}"
+            binding="{Source @= ImageUrl}; {Click @= ImageClick}"
             android:layout_margin="4dp"
             android:gravity="left"/>
 
     <TextView
+            android:padding="5dp"
             android:id="@+id/text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/image"
             android:layout_toEndOf="@+id/image"
-            binding="{Text @= Title}"
+            binding="{Text @= Title}; {Click @= TextClick}"
             android:gravity="left"
             android:layout_marginBottom="4dp"
             android:layout_marginLeft="10dp"
