parser now ignores double parsing markers ({ and })

--- a/AndroidBoundExample/src/main/res/layout/activity_main.xml
+++ b/AndroidBoundExample/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
         tools:context=".MainActivity"
         tools:ignore="MissingPrefix"
         android:padding="16dp"
-        binding="{ BackgroundColor @= MainActivityBackgroundColor }">
+        binding="{{ BackgroundColor @= MainActivityBackgroundColor }}"> //these double {{ and }} are just here for testing the parser - don't do this!
 
     <TextView
             android:id="@+id/activity_title"
