--- a/AndroidBoundExample/src/main/res/layout/activity_recyclerview.xml
+++ b/AndroidBoundExample/src/main/res/layout/activity_recyclerview.xml
@@ -37,6 +37,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/open_main_activity_button"
+                itemTemplate="@layout/activity_listview_listitem"
                 binding="{ItemsSource @= ExampleListLinear}"/>
 
         <android.support.v7.widget.RecyclerView
