--- a/AndroidBoundExample/src/main/res/layout/activity_main.xml
+++ b/AndroidBoundExample/src/main/res/layout/activity_main.xml
@@ -32,17 +32,6 @@
             binding="{ Click @- OpenBindableActivity }; {Text @= OpenBindableActivityText }; { Typeface @- ToFont(this, &apos;missing&apos;) };
             { BackgroundColor @= ButtonBackgroundColor }; { TextColor @= MainActivityTitleColor }"/>
 
-    <EditText
-            android:id="@+id/edittext"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@+id/open_bindable_activity_button"
-            android:textSize="20sp"
-            tools:text="edittext"
-            android:layout_margin="10dp"
-            binding="{ TextString =@ EditTextText }; { TextColor @= EditTextColor }; { Typeface @- ToFont(this, &apos;italic&apos;) }"/>
-
     <TextView
             android:id="@+id/edittext_textview"
             android:layout_width="wrap_content"
@@ -93,5 +82,31 @@
             android:layout_margin="10dp"
             android:text="open rv with objects activity"
             binding="{ Click @- OpenRecyclerViewWithObjectsActivity }"/>
+
+    <LinearLayout
+            android:id="@+id/edittext"
+            android:layout_below="@+id/open_bindable_activity_button"
+            android:layout_centerHorizontal="true"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+    <EditText
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            tools:text="edittext"
+            binding="{ TextString =@ EditTextText };
+             { EditTextText @= BoundEditTextText }
+             { TextColor @= EditTextColor }; { Typeface @- ToFont(this, &apos;italic&apos;) }" />
+
+        <Button
+                binding="{ Click @= ClearEditTextText }; "
+                android:text="clear"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+    </LinearLayout>
 
 </RelativeLayout>
