--- a/AndroidBoundExample/src/main/res/layout/activity_main.xml
+++ b/AndroidBoundExample/src/main/res/layout/activity_main.xml
@@ -84,6 +84,14 @@
                 android:text="open rv with objects activity"
                 binding="{ Click @- OpenRecyclerViewWithObjectsActivity }"/>
 
+        <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:layout_margin="10dp"
+                android:text="open paginated RV"
+                binding="{ Click @- OpenPaginatedRecyclerViewActivity }"/>
+
     </LinearLayout>
 
     <LinearLayout
