--- a/AndroidBoundExample/src/main/res/layout/activity_paginated_recyclerview.xml
+++ b/AndroidBoundExample/src/main/res/layout/activity_paginated_recyclerview.xml
@@ -7,7 +7,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/open_main_activity_button"
-            itemTemplate="@layout/activity_listview_listitem"
-            binding="{Items += DataItems}"/>
+            itemTemplate="@layout/activity_paginated_rv_item"
+            binding="{Items += DataItems}; { NextPage =@ LoadNextPage }; "/>
 
 </LinearLayout>
