--- a/AndroidBoundExample/src/main/res/layout/activity_paginated_rv_item.xml
+++ b/AndroidBoundExample/src/main/res/layout/activity_paginated_rv_item.xml
@@ -24,7 +24,7 @@
             android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/image"
             android:layout_toEndOf="@+id/image"
-            binding="{Text @= Title}"
+            binding="{Text @= Name}"
             android:gravity="left"
             android:layout_marginBottom="4dp"
             android:layout_marginLeft="10dp"
