Add ClickListener to BindableRecyclerView

--- a/AndroidBoundExample/src/main/res/layout/activity_listview_listitem.xml
+++ b/AndroidBoundExample/src/main/res/layout/activity_listview_listitem.xml
@@ -13,7 +13,7 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            binding="{Source @= ImageUrl}"
+            binding="{Source @= ImageUrl}; {Click @- ImageClicked }"
             android:layout_margin="4dp"
             android:gravity="left"/>
 
