--- a/AndroidBoundExample/src/main/res/layout/activity_listview.xml
+++ b/AndroidBoundExample/src/main/res/layout/activity_listview.xml
@@ -27,8 +27,8 @@
             android:layout_below="@+id/activity_title"
             android:textSize="16sp"
             android:layout_margin="16dp"
-            android:text="open main activity"
-            binding="{ Click @- OpenMainActivity }"/>
+            tools:text="open main activity"
+            binding="{ Text @= OpenMainActivityText }; { Click @- OpenMainActivity }"/>
 
     <ListView
             android:id="@+id/listview"
