--- a/AndroidBoundExample/src/main/res/layout/activity_recyclerview.xml
+++ b/AndroidBoundExample/src/main/res/layout/activity_recyclerview.xml
@@ -29,8 +29,8 @@
                 android:layout_below="@+id/activity_title"
                 android:textSize="16sp"
                 android:layout_margin="16dp"
-                android:text="open main activity"
-                binding="{ Click @- OpenMainActivity }"/>
+                tools:text="open main activity"
+                binding="{ Text @= OpenMainActivityText }; { Click @- OpenMainActivity }"/>
 
         <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerview_linear"
