now setting TemplatesForObjects from binding

--- a/AndroidBoundExample/src/main/res/layout/activity_recyclerview.xml
+++ b/AndroidBoundExample/src/main/res/layout/activity_recyclerview.xml
@@ -45,7 +45,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/recyclerview_linear"
-                binding="{ItemsSource @= ExampleListStaggered}; { OnItemClickListener @- OnItemClickListenerView  } "/>
+                binding="{ItemsSource @= ExampleListStaggered}; {TemplatesForObjects @- StaggeredTemplatesForObjects}; { OnItemClickListener @- OnItemClickListenerView  } "/>
 
         <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerview_normal"
