--- a/AndroidBoundExample/src/main/res/layout/activity_main.xml
+++ b/AndroidBoundExample/src/main/res/layout/activity_main.xml
@@ -58,6 +58,15 @@
                 binding="{ Click @- OpenListViewWithObjectsActivity }"/>
 
         <Button
+                android:id="@+id/open_rv_activity_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:layout_margin="10dp"
+                android:text="open rv activity"
+                binding="{ Click @- OpenRecyclerViewActivity }"/>
+
+        <Button
                 android:id="@+id/open_rvwithobjects_activity_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
